# Changelog

## Version  3.0.0

* Adding AVC support (libx264)
* Adding #65 rav1e support (librav1e)
* Adding #49 SVT AV1 support (libsvtav1) directly with FFmpeg
* Adding SVT AV1 dual pass, tier, scene detection, and tile parameters
* Adding #67 Status Panel to view encoding logs
* Adding #58 Support for cover attachments
* Adding various speed improvements
* Adding changelog in GUI
* Adding #68 version upgrade dialogue
* Adding icons to encoders drop down
* Adding video filename path
* Adding check for new ffmpeg on startup
* Adding #69 nice feature for language selection (thanks to HannesJo0139)
* Fixing Windows taskbar does not always show icon
* Fixing #55 GUI logs by splitting them from core logs
* Fixing that mkv cover attachments would show as video tracks
* Fixing plugins should not be available if no FFmpeg library for them
* Changing logs to be separated into GUI and conversion logs
* Changing major internal re-write to keep encoding even if GUI dies
* Changing bitrate suggestion resolutions to be more readable with fps
* Changing command builders to specify the temporary files themselves
* Changing changelog to proper markdown
* Changing rotation and flip section to drop downs
* Removing support for the direct SVT AV1 encoder (fixes #24)
* Removing support for cutielog / socket based logging

## Version 2.6.2

* Switching windows builds from zeranoe.com to gyan.dev

## Version  2.6.1

* Adding HEVC crf suggestions back
* Fixing #62 VP9 and GIF crashing due to label bug (thanks to -L0Lock-)

## Version  2.6.0

* Adding AV1 AOM settings for cpu-used, tile-columns, tile-rows, row-mt
* Adding HEVC x265 setting for profile
* Changing plugins to include library used for encoding
* Changing HEVC default speed to "medium" and crf to 28 to match x265 defaults
* Fixing command builders to specify stream instead of video track for codec
* Fixing FPS not showing correctly when dealing with higher numbers