@@ -7,7 +7,7 @@
 * Adding #49 SVT AV1 support (libsvtav1) directly with FFmpeg
 * Adding SVT AV1 dual pass, tier, scene detection, and tile parameters
 * Adding #67 Status Panel to view encoding logs
-* Adding #58 Support for cover attachments
+* Adding #58 Support for cover attachments (thanks to -L0Lock-)
 * Adding various speed improvements
 * Adding changelog in GUI
 * Adding #68 version upgrade dialogue
@@ -15,8 +15,10 @@
 * Adding video filename path
 * Adding check for new ffmpeg on startup
 * Adding #69 nice feature for language selection (thanks to HannesJo0139)
+* Adding button to copy commands to clipboard
 * Fixing Windows taskbar does not always show icon
 * Fixing #55 GUI logs by splitting them from core logs
+* Fixing #42 log output from FFmpeg stopped due to PIPE filling up (thanks to Trevbams)
 * Fixing that mkv cover attachments would show as video tracks
 * Fixing plugins should not be available if no FFmpeg library for them
 * Changing logs to be separated into GUI and conversion logs
